Added examples to src directory.
Examples are in src directory and are created by the gulp script at
build time with the correct version of Bitsy.

--- a/examplesxxx/mediators.html
+++ b/examplesxxx/mediators.html
@@ -6,8 +6,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>Bitsy</title>
-  <script src="../dist/bitsy-1.0.1.js"></script>  <style>
+  <title>Bitsy: Mediators</title>
+  <script src='../dist/bitsy-1.0.1.js'></script>
+
+  <style>
     body {
       padding: 20px;
     }
