--- a/examplesxxx/routing.html
+++ b/examplesxxx/routing.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="msapplication-tap-highlight" content="no">
-  <title>Bitsy</title>
-  <script src="../dist/bitsy-1.0.1.js"></script>   <style type="text/css">
+<html>
+  <head>
+    <title>Routing Example</title>
+    <script src='../dist/bitsy-1.0.1.js'></script>
+    <style type="text/css">
         body {
             font-family: "Helvetica Neue", HelveticaNeue, SegoeUI, Roboto;
             font-size: 14px;
